--- a/form.css
+++ b/form.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: linear-gradient(135deg, #e91e63, #673ab7);
+    background: linear-gradient(135deg, #e91e63, #673ab7);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,7 +12,7 @@ body{
     padding: 30px;
     border-radius: 10px;
     width: 400px;
-    box-shadow: o 4px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 h2{
     margin-bottom: 20px;
@@ -22,7 +22,7 @@ h2{
     display: flex;
     gap: 15px;
 }
-grp1{
+.grp1{
     flex: 1;
     display: flex;
     flex-direction: column;
